src/objects/CPO_Template__mdt.object
<CustomObject>
    <description>When a standard care plan is created, these objectives will be copied into that plan</description>
    <fields>
        <fullName>Area__c</fullName>
        <inlineHelpText>One of:
Drug Use
Alcohol Use
Accomodation/Independent Living
Mental Health
Physical Health
Justice and Legal
Family and Relationships
Finance
Employment
Education and Training</inlineHelpText>
        <label>Area</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Include_this__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>Tick to include this objective in the care plan</inlineHelpText>
        <label>Include this objective</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Objective_Note__c</fullName>
        <label>Objective Note</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Objective_Status__c</fullName>
        <defaultValue>&quot;In Progress&quot;</defaultValue>
        <inlineHelpText>One of:
Draft
In Progress
Blocked
Closed</inlineHelpText>
        <label>Objective Status</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Obsolete__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>If ticked, then this care plan objective will not appear in the list of standard objectives</inlineHelpText>
        <label>Obsolete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Priority__c</fullName>
        <defaultValue>&quot;Medium&quot;</defaultValue>
        <inlineHelpText>One of:
Low
Medium
High</inlineHelpText>
        <label>Priority</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <label>Care Plan Objective Template</label>
    <pluralLabel>Care Plan Objective Templates</pluralLabel>
</CustomObject>